--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         id: checkout
@@ -35,5 +34,5 @@ jobs:
         id: test-action-with-plugins
         uses: ./
         with:
-          wash-version: "wash-v1.0.0-rc.1"
+          wash-version: "wash-v1.0.0-rc.2"
           plugins: "ghcr.io/cosmonic-labs/plugins/openapi2mcp:0.3.0"
